# netgpu-master

./: .Makefile.swp  .cproject  .nvprofscript.sh.swp  .project  IPSCAN.alarms  MakeStart  MakeStart~  Makefile  Makefile.am  Makefile.back  Makefile.in  Makefile~  README  README.md  Thesis4.xml  a.out  abc.csv  ahoprintgpu.csv  config.status  configure  configure.ac  libtool  makestart  module-installer.sh  nvprofscript.sh  tags  wumanprintgpu10.csv  wumanprintgpu100.csv  wumanprintgpu1000.csv  wumanprintgpu1500.csv  wumanprintgpu1800.csv  wumanprintgpu200.csv  wumanprintgpu50.csv  wumanprintgpu500.csv
Examples/: .dmodule.ppph  .results_meera.txt.swp  123.txt  AhoCorasick.cu  Main.cpp  (+154 more)
src/: IpToDotted.c  Makefile  Makefile.am  Makefile.in  Makefile~  Util.h  Util.h~  iptodotted  libnetgpu.la  netgpu.h  tags
src/.libs/: libnetgpu.la  libnetgpu.lai  libnetgpu.so.0.0.0
src/Analysis/: .AnalysisSkeleton.h.swo  .AnalysisSkeleton.h.swp  AnalysisPrototype.h  AnalysisSkeleton.h  AnalysisSkeleton.h.save.1  AnalysisSkeleton2.hNotPinned  AnalysisSkeleton2.hPinnedRK  AnalysisSkeletonNotPinned  AnalysisSkeletonNotPinnedWorking  AnalysisSkeletonPinned  AnalysisSkeleton_RK.h.old  AnalysisState.h  Checkings.h  IncCounter.def  Makefile  Makefile.am  Makefile.in  UserExtraKernelCall.def  patterns10.cpp  patterns1500.cpp  patterns1782.cpp  patterns200.cpp  patterns50.cpp
src/Analysis/Libs/: Makefile  Makefile.am  Makefile.in
src/Analysis/Libs/Gpu/: CudaSafeAccess.cu  CudaSafeAccess.lo  CudaSharedMemoryOperations.cu  Endianness.cu  Endianness.h  Endianness.lo  InlineFiltering.cu  InlineFiltering.lo  Makefile  Makefile.am  Makefile.in  libanalysis-libs-gpu.la
src/Analysis/Libs/Gpu/.libs/: libanalysis-libs-gpu.la
src/Analysis/Libs/Gpu/Macros/: General.h  Hooks.h  Makefile  Makefile.am  Makefile.in  Mining.h  Util.h  tags
src/Analysis/Libs/Gpu/Macros/usr/local/include/netgpu/Analysis/Libs/Gpu/Macros/: Filtering.h  Mining.h
src/Analysis/Libs/Gpu/Sorter/: QuickSorter.cu  QuickSorter.h  SimpleSorter.cu  SimpleSorter.h
src/Analysis/Libs/Host/: Makefile  Makefile.am  Makefile.in
src/Analysis/Libs/Host/Database/: Makefile  Makefile.am  Makefile.in  ODBCDatabaseManager.cpp  ODBCDatabaseManager.lo  QueryManager.cpp  QueryManager.lo  libanalysis-libs-host-db.la
src/Analysis/Libs/Host/Database/.deps/: ODBCDatabaseManager.Plo  QueryManager.Plo
src/Analysis/Libs/Host/Database/.libs/: libanalysis-libs-host-db.la
src/Analysis/Libs/Host/Database/usr/local/include/netgpu/Analysis/Libs/Host/Database/: QueryManager.h
src/Analysis/Libs/Host/GpuMemoryManagement/: BMMS.cpp  BMMS.lo  Makefile  Makefile.am  Makefile.in  libanalysis-libs-host-mm.la
src/Analysis/Libs/Host/GpuMemoryManagement/.deps/: BMMS.Plo
src/Analysis/Libs/Host/GpuMemoryManagement/.libs/: libanalysis-libs-host-mm.la
src/Analysis/Modules/: Makefile  Makefile.am  Makefile.in  PrecodedSyncblocks.def  tags
src/Analysis/Modules/Analysis/: Graphs.module
src/Analysis/Modules/Analysis/ScanDetectors/: .IpScanDetector.module.swo  .IpScanDetector.module.swp  IpScanDetector.module  IpScanDetector.module.http  IpScanDetector.module.old  IpScanDetector.module.save  IpScanDetectorBUGGY.bk  IpScanDetectorOld.module  IpScanFullProgram.cpp  PortScanDetectorBUGGY.bk
src/Analysis/Modules/Analysis/Thresholds/: Thresholds.h  Throughputs.module
src/Analysis/Modules/Hooks/: ProgramExecution.module
src/Analysis/Modules/Hooks/Histograms/: HistogramDump.module
src/Analysis/Modules/Hooks/ScanDetectors/: IpScanDump.module  IpScanDump_RK.module.old  PortScanDBDump.module
src/Analysis/Modules/Hooks/Thresholds/: ThroughputsDBDump.module
src/Analysis/Modules/Operations/Histograms/: Normalizer.module
src/Analysis/Modules/Operations/Sorters/: README
src/Analysis/Modules/Operations/Thresholds/: MultiRates.module
src/Analysis/Pattern/: patterns10.cpp  patterns1500.cpp  patterns1800.cpp
src/AnalysisTemplate/: AnalysisTemplate.cu  AnalysisTemplate.h  Makefile
src/Common/: .Dissector.cpp.swp  AhoCorasick.h  AhoCorasick.h~  Dissector.cpp  Dissector.cpp~  Dissector.h  Dissector.lo  Dissector.openmp  Makefile  Makefile.am  Makefile.in  Makefile~  PacketBuffer.cpp  PacketBuffer.cpp~  PacketBuffer.h  PacketBuffer.lo  PacketFeeder.h  VirtualHeader.cpp  VirtualHeader.lo  WuManber.h  libcommon.la  tags
src/Common/.deps/: Dissector.Plo  PacketBuffer.Plo  VirtualHeader.Plo
src/Common/Pattern/: patterns10.cpp  patterns100.cpp  patterns1000.cpp  patterns200.cpp  patterns50.cpp  patterns500.cpp
src/Common/Protocols/: Ethernet2Header.cpp  IcmpHeader.cpp  IcmpHeader.lo  Ip4Header.cpp  Ip4Header.h  Ip4Header.lo  Ip6Header.cpp  Ip6Header.h  Makefile  Makefile.am  Makefile.in  TcpHeader.cpp  TcpHeader.h  TcpHeader.lo  UdpHeader.cpp  libcommon-protocols.la  tags
src/Common/Protocols/.deps/: Ethernet2Header.Plo  IcmpHeader.Plo  Ip4Header.Plo  Ip6Header.Plo  TcpHeader.Plo  UdpHeader.Plo
src/Common/Protocols/.libs/: libcommon-protocols.la
src/Common/Protocols/usr/local/include/netgpu/Common/Protocols/: IcmpHeader.h
src/PacketFeeders/: LivePacketFeeder.cpp  LivePacketFeeder.h  LivePacketFeeder.lo  Makefile  Makefile.am  Makefile.in  OfflinePacketFeeder.cpp  OfflinePacketFeeder.cpp~  OfflinePacketFeeder.h  OfflinePacketFeeder.lo  SizeDissector.cpp  SizeDissector.h  SizeDissector.lo
src/PacketFeeders/.deps/: LivePacketFeeder.Plo  OfflinePacketFeeder.Plo  SizeDissector.Plo
src/PacketFeeders/.libs/: libpacketfeeders.la
src/PreAnalyzer/: Makefile  Makefile.am  Makefile.in  PreAnalyzer.cpp  PreAnalyzer.lo  PreAnalyzerDissector.cpp  PreAnalyzerDissector.h  PreAnalyzerDissector.lo  libpreanalyzer.la
src/PreAnalyzer/.deps/: PreAnalyzer.Plo  PreAnalyzerDissector.Plo
src/PreAnalyzer/.libs/: libpreanalyzer.la
src/Scheduler/: Makefile  Makefile.am  Makefile.in  Scheduler.cpp  Scheduler.cpp.old  Scheduler.cpp.save  Scheduler.cpp.save.1  Scheduler.cpp.save.2  Scheduler.cpp~  Scheduler.h  Scheduler.lo  tags
src/Scheduler/.deps/: Scheduler.Plo
src/Tools/: Makefile  Makefile.am  Makefile.in  dmodule.sh  netgpu__compile_analysis  netgpu_create_analysis
(+180 files in other folders)
