MAINTAINERCLEANFILES = Makefile.in
SUBDIRS = Libs Modules 

library_includedir=$(includedir)/netgpu/Analysis

library_include_HEADERS = AnalysisPrototype.h \
			AnalysisSkeleton.h AnalysisState.h \
			Checkings.h Initializer.h \
			Windows.h DecCounter.def\
			IncCounter.def InitCounter.def\
			PredefinedExtraKernel.def PredefinedExtraKernelCall.def\
			UserExtraKernel.def UserExtraKernelCall.def
				
				
analysisdir=$(datadir)/netgpu/include/netgpu/Analysis

analysis_DATA = AnalysisPrototype.h \
			AnalysisSkeleton.h AnalysisState.h \
			Checkings.h Initializer.h \
			Windows.h DecCounter.def\
			IncCounter.def InitCounter.def\
			PredefinedExtraKernel.def PredefinedExtraKernelCall.def\
			UserExtraKernel.def UserExtraKernelCall.def
	
