MAINTAINERCLEANFILES = Makefile.in
SUBDIRS = Protocols

noinst_LTLIBRARIES = libcommon.la
libcommon_la_SOURCES = \
	Dissector.h Dissector.cpp\
	PacketBuffer.h PacketBuffer.cpp\
	VirtualHeader.h VirtualHeader.cpp\
	PacketFeeder.h


library_includedir=$(includedir)/netgpu/Common

library_include_HEADERS =\
	Dissector.h\
	PacketBuffer.h\
	VirtualHeader.h\
	PacketFeeder.h


commondir=$(datadir)/netgpu/include/netgpu/Common

common_DATA = Dissector.h\
	PacketBuffer.h\
	VirtualHeader.h\
	PacketFeeder.h


