MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libpacketfeeders.la
libpacketfeeders_la_SOURCES = \
	SizeDissector.h SizeDissector.cpp\
	LivePacketFeeder.h LivePacketFeeder.cpp\
	OfflinePacketFeeder.h OfflinePacketFeeder.cpp

library_includedir=$(includedir)/netgpu/PacketFeeders

library_include_HEADERS =\
	SizeDissector.h\
	LivePacketFeeder.h\
	OfflinePacketFeeder.h 

packetfeedersdir=$(datadir)/netgpu/include/netgpu/PacketFeeders
packetfeeders_DATA =\
	SizeDissector.h\
	LivePacketFeeder.h\
	OfflinePacketFeeder.h 

