MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libpreanalyzer.la
libpreanalyzer_la_SOURCES = \
	PreAnalyzer.h PreAnalyzer.cpp\
	PreAnalyzerDissector.h PreAnalyzerDissector.cpp

library_includedir=$(includedir)/netgpu/PreAnalyzer

library_include_HEADERS =\
	PreAnalyzer.h\
	PreAnalyzerDissector.h

preanalyzerdir=$(datadir)/netgpu/include/netgpu/PreAnalyzer
preanalyzer_DATA =\
	PreAnalyzer.h\
	PreAnalyzerDissector.h
