MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libscheduler.la
libscheduler_la_SOURCES = \
	Scheduler.h Scheduler.cpp

library_includedir=$(includedir)/netgpu/Scheduler

library_include_HEADERS = Scheduler.h

schedulerdir=$(datadir)/netgpu/include/netgpu/Scheduler

scheduler_DATA = Scheduler.h
	
