MAINTAINERCLEANFILES = Makefile.in

library_includedir=$(includedir)/netgpu/Analysis/Modules

library_include_HEADERS =CheckMultiKernelOperationFlag.def\
			PrecodedSyncblocks.def\
		SetMultiKernelOperationFlag.def

analysismodulesdir=$(datadir)/netgpu/include/netgpu/Analysis/Modules

analysismodules_DATA = CheckMultiKernelOperationFlag.def\
			PrecodedSyncblocks.def\
			SetMultiKernelOperationFlag.def

