MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libcommon-protocols.la
libcommon_protocols_la_SOURCES = \
	Ethernet2Header.h Ethernet2Header.cpp\
	Ip4Header.h Ip4Header.cpp\
	Ip6Header.h Ip6Header.cpp\
	IcmpHeader.h IcmpHeader.cpp\
	TcpHeader.h TcpHeader.cpp\
	UdpHeader.h UdpHeader.cpp

library_includedir=$(includedir)/netgpu/Common/Protocols

library_include_HEADERS =\
	Ethernet2Header.h\
	Ip4Header.h\
	Ip6Header.h\
	IcmpHeader.h\
	TcpHeader.h\
	UdpHeader.h

protocolsdir=$(datadir)/netgpu/include/netgpu/Common/Protocols

protocols_DATA =\
	Ethernet2Header.h\
	Ip4Header.h\
	Ip6Header.h\
	IcmpHeader.h\
	TcpHeader.h\
	UdpHeader.h


