MAINTAINERCLEANFILES = Makefile.in

#headers	
library_includedir=$(includedir)/netgpu/Analysis/Libs/Gpu/Macros

library_include_HEADERS = Filtering.h\
			  General.h\
		  Hooks.h\
			  Mining.h\
	   		Operations.h\
			Util.h

macrosdir=$(datadir)/netgpu/include/netgpu/Analysis/Libs/Gpu/Macros

macros_DATA = Filtering.h\
			  General.h\
			  Hooks.h\
			  Mining.h\
	   		Operations.h\
			Util.h
