MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libanalysis-libs-host-mm.la
libanalysis_libs_host_mm_la_SOURCES = \
	BMMS.h BMMS.cpp

library_includedir=$(includedir)/netgpu/Analysis/Libs/Host/GpuMemoryManagement

library_include_HEADERS = BMMS.h 

mmudir=$(datadir)/netgpu/include/netgpu/Analysis/Libs/Host/GpuMemoryManagement

mmu_DATA = BMMS.h 
	
